# Localizator

./: CMakeLists.txt  Main.qml  README.md  images.qrc  main.cpp  networkmanager.cpp  networkmanager.h  positionmanager.cpp  positionmanager.h
android/: AndroidManifest.xml
